[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybeat"
version = "0.0.1"
description = "A modern asynchronous Python media library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "PyBeat Developers" }
]

keywords = [
    "python",
    "music",
    "media",
    "youtube",
    "spotify",
    "soundcloud",
    "asyncio"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pybeat*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
